fixed layout bug for smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -237,14 +237,18 @@ header {
 
 .experience-section {
   text-align: center;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-content: center;
 }
 
 .experience-item {
-  width: 400px;
+  width: 100%;
   letter-spacing: 2px;
   margin: 30px 0;
   line-height: 1.3;
-  border: 1px solid #222;
+  /* border: 1px solid #222; */
   padding: 25px;
 }
 
@@ -309,7 +313,8 @@ header {
 
 .project-item-container {
   display: flex;
-  width: 450px;
+  width: 250px;
+  /* width: 100%; */
   margin: 100px 0;
 
   flex-direction: row;
@@ -327,7 +332,7 @@ header {
 }
 
 .project-item img {
-  width: 450px;
+  width: 250px;
 }
 
 .img-overlay {
@@ -361,7 +366,7 @@ header {
 
 .btn-container {
   position: absolute;
-  width: 450px;
+  width: 250px;
 }
 
 #project button:hover {
@@ -387,6 +392,7 @@ header {
   width: 100px;
   height: 100px;
   font-size: 60px;
+  padding: 20px;
 }
 
 #contact h2 {
@@ -498,6 +504,29 @@ footer p a:hover {
   }
 }
 
+
+/* Phone with larger display */
+@media only screen and (min-width: 400px) {
+  .project-item-container {
+    width: 350px;
+  }
+  
+  .project-item img {
+    width: 350px;
+  }
+  
+  
+  .project-item:hover .img-overlay{
+    opacity: 1;
+  }
+
+  .btn-container {
+    position: absolute;
+    width: 350px;
+  }
+}
+
+
 /* Desktop */
 @media only screen and (min-width: 768px) {
   .intro {
@@ -562,8 +591,10 @@ footer p a:hover {
   .experience-section {
     display: flex;
     flex-direction: row;
-    align-content: space-around;
-    width: 900px;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
     margin-bottom: 50px;
   }
 
